--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">NotePad</string>
+    <string name="app_name">Note Pad</string>
+    <string name="notepad">Note Pad</string>
+    <string name="_2020_saleh_qaseer">© 2020, Saleh Qaseer</string>
+    <string name="version_1_0">Version 1.0</string>
 </resources>
